# virtuous

./: .gitignore  AGENTS.md  CHANGELOG.md  CURRENT_STATE.md  IMPLEMENTATION.md  LICENSE  Makefile  PROMPT_BASE.md  README.md  SPEC-RPC.md  SPEC.md  cors.go  go.mod  go.sum  httpapi_aliases.go  issues.MD  rpc_aliases.go
_design/: SPEC-RPC-SIMPLE.md  SPEC-RPC.md
docs/: agent_quickstart.md  doc-spec.md  overview.md
example/: client.gen.js  client.gen.py  client.gen.ts  docs.html  go.mod  handlers.go  main.go  openapi.json  output_test.go  test_client.py  utils.go
guard/: guard.go
httpapi/: auth_any_test.go  client_gen_test.go  client_js_gen.go  client_js_lite_gen.go  client_live_e2e_test.go  client_py_contract_test.go  client_py_gen.go  client_py_signing_test.go  client_render.go  client_spec.go  client_spec_test.go  client_stability_test.go  client_ts.go  cors.go  docs.go  docs_test.go  encode.go  encode_test.go  logger.go  metadata.go  metadata_test.go  openapi.go  openapi_test.go  path_params.go  path_params_test.go  pgtype_test.go  preferred_name.go  query_params.go  query_params_test.go  react_query_ts.go  react_query_ts_test.go  request_optionality.go  request_optionality_test.go  response_specs.go  router.go  router_event_test.go  serve_all.go  utils.go
python_loader/: .gitignore  README.md  pyproject.toml  test_import.py  test_loader.py
python_loader/virtuous/: __init__.py  loader.py
rpc/: client_js_gen.go  client_py_contract_test.go  client_py_gen.go  client_py_gen_test.go  client_py_signing_test.go  client_spec.go  client_stability_test.go  client_ts.go  (+19 more)
(+287 files in other folders)
